<resources>
    <string name="app_name">Geografia VI</string>
    <string name="lbl_titulo">Geografia</string>

    <string name="lbl_cuestionario">Cuestionario</string>
    <string name="lbl_brujula">Brujula</string>
    <string name="lbl_ubicacion">Coordenadas</string>
    <string name="lbl_lecciones">México y el mundo</string>
    <string name="lbl_galeria">Galeria</string>

    <string name="btn_cuestionario">Cuestionario</string>
    <string name="btn_brujula">Brújula</string>
    <string name="btn_ubicacion">Ubicacion</string>
    <string name="btn_lecciones">Lecciones</string>
    <string name="btn_galeria">Galeria</string>
    <string name="lbl_geolocalizacion">Coordenadas Geográficas</string>
    <string name="lbl_latitud">Latitud: </string>
    <string name="lbl_longitud">Longitud: </string>
    <string name="lbl_altitud">Altitud: </string>

    <string name="lbl_estudio">I Rompecabezas de paises</string>
    <string name="lbl_naturaleza">III Estados y sus Capitales</string>
    <string name="lbl_poblacion">IV Placas Tectonicas</string>
    <string name="lbl_economia">V Mapa de mexico</string>

    <string-array name="entidades_federativas">
        <item> Aguascalientes</item>
        <item> Baja California</item>
        <item> Baja California Sur</item>
        <item> Campeche</item>
        <item> Chiapas</item>
        <item> Chihuahua</item>
        <item> Ciudad de México</item>
        <item> Coahuila</item>
        <item> Colima</item>
        <item> Durango</item>
        <item> Guanajuato</item>
        <item> Guerrero</item>
        <item> Hidalgo</item>
        <item> Jalisco</item>
        <item> México</item>
        <item> Michoacán</item>
        <item> Morelos</item>
        <item> Nayarit</item>
        <item> Nuevo León</item>
        <item> Oaxaca</item>
        <item> Puebla</item>
        <item> Querétaro</item>
        <item> Quintana Roo</item>
        <item> San Luis Potosí</item>
        <item> Sinaloa</item>
        <item> Sonora</item>
        <item> Tabasco</item>
        <item> Tamaulipas</item>
        <item> Tlaxcala</item>
        <item> Veracruz</item>
        <item> Yucatán</item>
        <item> Zacatecas</item>
    </string-array>
    <string-array name="capitales">
        <item>Aguascalientes</item>
        <item>Mexicali</item>
        <item>La Paz</item>
        <item>San Francisco de Campeche</item>
        <item>Tuxtla Gutiérrez</item>
        <item>Chihuahua</item>
        <item>Ciudad de México</item>
        <item>Saltillo</item>
        <item>Colima</item>
        <item>Victoria de Durango</item>
        <item>Guanajuato</item>
        <item>Chilpancingo de los Bravo</item>
        <item>Pachuca de Soto</item>
        <item>Guadalajara</item>
        <item>Toluca de Lerdo</item>
        <item>Morelia</item>
        <item>Cuernavaca</item>
        <item>Tepic</item>
        <item>Monterrey</item>
        <item>Oaxaca de Juárez</item>
        <item>Puebla de Zaragoza</item>
        <item>Santiago de Querétaro</item>
        <item>Chetumal</item>
        <item>San Luis Potosí</item>
        <item>Culiacán Rosales</item>
        <item>Hermosillo</item>
        <item>Villahermosa</item>
        <item>Ciudad Victoria</item>
        <item>Tlaxcala de Xicohténcatl</item>
        <item>Xalapa-Enríquez</item>
        <item>Mérida</item>
        <item>Zacatecas</item>

    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>