<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#293241"
    tools:context=".Activity_Lecciones">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foregroundGravity="center"
        tools:layout_editor_absoluteX="-40dp"
        tools:layout_editor_absoluteY="68dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/karla_bold"
                android:foregroundGravity="center"
                android:gravity="center"
                android:text="@string/btn_lecciones"
                android:textColor="@color/cardview_light_background"
                android:textSize="24sp" />

            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="?android:attr/activatedBackgroundIndicator"
                android:contentDescription="@string/btn_lecciones"
                android:onClick="acrivityRompecabezas"
                app:srcCompat="@drawable/elestudidelatierra" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foregroundGravity="center"
                android:gravity="center"
                android:text="@string/lbl_estudio"
                android:textColor="@color/cardview_light_background"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/imageButton7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="?android:attr/activatedBackgroundIndicator"
                android:contentDescription="@string/btn_lecciones"
                app:srcCompat="@drawable/naturalezayeldesarrollosustentable" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foregroundGravity="center"
                android:gravity="center"
                android:text="@string/lbl_naturaleza"
                android:textColor="@color/cardview_light_background"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/imageButton8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="?android:attr/activatedBackgroundIndicator"
                android:contentDescription="@string/btn_lecciones"
                app:srcCompat="@drawable/personasydiversidad" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foregroundGravity="center"
                android:gravity="center"
                android:text="@string/lbl_poblacion"
                android:textColor="@color/cardview_light_background"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/imageButton10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="?android:attr/activatedBackgroundIndicator"
                android:contentDescription="@string/btn_lecciones"
                app:srcCompat="@drawable/laeconomiamundial" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foregroundGravity="center"
                android:gravity="center"
                android:text="@string/lbl_economia"
                android:textColor="@color/cardview_light_background"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>