<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#293241"
    tools:context=".Activity_Ubicacion">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#293241"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/karla_bold"
                android:gravity="center"
                android:text="@string/lbl_geolocalizacion"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/lblLongitud"
                android:layout_width="354dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="44dp"
                android:layout_marginTop="36dp"
                android:fontFamily="@font/noto_sans"
                android:gravity="center|start"
                android:text="@string/lbl_longitud"
                android:textColor="@color/cardview_light_background"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/lblLatitud"
                android:layout_width="354dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="44dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/noto_sans"
                android:text="@string/lbl_latitud"
                android:textColor="@color/cardview_light_background"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/lblAltitud"
                android:layout_width="354dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="44dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/noto_sans"
                android:text="@string/lbl_altitud"
                android:textColor="@color/cardview_light_background"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="195dp"
                android:contentDescription="@string/lbl_altitud"
                app:srcCompat="@drawable/mar" />

            <TextView
                android:id="@+id/lblNivelDelMar"
                android:layout_width="316dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="44dp"
                android:layout_marginRight="44dp"
                android:fontFamily="@font/noto_sans"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="195dp"
                android:contentDescription="@string/btn_ubicacion"
                app:srcCompat="@drawable/satelite" />

            <TextView
                android:id="@+id/lblEstacion"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="44dp"
                android:layout_marginRight="44dp"
                android:fontFamily="@font/noto_sans"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/angel" />

            <TextView
                android:id="@+id/lblCDMX"
                android:layout_width="315dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="44dp"
                android:layout_marginRight="44dp"
                android:fontFamily="@font/noto_sans"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="210dp"
                app:srcCompat="@drawable/nucleo" />

            <TextView
                android:id="@+id/lblNucleo"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="44dp"
                android:layout_marginRight="44dp"
                android:fontFamily="@font/noto_sans"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>